--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,66 @@
-alabaster==0.7.10
+alabaster==0.7.12
 appdirs==1.4.3
 argh==0.26.2
-asn1crypto==0.24.0
-Babel==2.4.0
-bcrypt==3.1.4
-certifi==2017.11.5
-cffi==1.11.5
+asgiref==3.2.7
+asn1crypto==1.3.0
+attrs==19.3.0
+Babel==2.8.0
+bcrypt==3.1.7
+certifi==2020.4.5.1
+cffi==1.14.0
 chardet==3.0.4
-colorama==0.3.7
-coverage==4.3.4
-cryptography==2.2.2
-dj-database-url==0.4.2
-Django==2.0.4
-django-model-utils==3.1.1
-django-phonenumber-field==1.3.0
-django-storages==1.6.6
+colorama==0.4.3
+coverage==5.0.4
+cryptography==2.9
+dj-database-url==0.5.0
+Django==3.0.5
+django-model-utils==4.0.0
+django-phonenumber-field==4.0.0
+django-storages==1.9.1
 docopt==0.6.2
-docutils==0.14
-Faker==0.7.3
-gunicorn==19.7.1
-idna==2.6
-imagesize==0.7.1
-Jinja2==2.10
-livereload==2.5.1
-MarkupSafe==1.0
-mixer==5.6.6
-mock==2.0.0
-packaging==16.8
-paramiko==2.4.1
+docutils==0.16
+Faker==4.0.2
+gunicorn==20.0.4
+idna==2.9
+imagesize==1.2.0
+importlib-metadata==1.6.0
+Jinja2==2.11.1
+livereload==2.6.1
+MarkupSafe==1.1.1
+mixer==6.1.3
+mock==4.0.2
+more-itertools==8.2.0
+packaging==20.3
+paramiko==2.7.1
 pathtools==0.1.2
-pbr==3.0.0
-phonenumberslite==8.4.1
-port-for==0.3.1
-psycopg2==2.7.4
-py==1.4.33
-pyasn1==0.4.2
-pycparser==2.18
-Pygments==2.2.0
-PyNaCl==1.2.1
-pyparsing==2.2.0
-pytest==3.0.7
-pytest-cov==2.4.0
-pytest-django==3.1.2
-pytest-watch==4.1.0
-python-dateutil==2.6.0
-pytz==2017.2
-PyYAML==3.12
-requests==2.18.4
-six==1.10.0
-snowballstemmer==1.2.1
-sphinxcontrib-websupport==1.0.1
-tornado==4.5.2
-urllib3==1.22
-watchdog==0.8.3
-whitenoise==3.3.0
+pbr==5.4.5
+phonenumberslite==8.12.1
+pip-review==1.1.0
+pluggy==0.13.1
+port-for==0.4
+psycopg2-binary==2.8.5
+py==1.8.1
+pyasn1==0.4.8
+pycparser==2.20
+Pygments==2.6.1
+PyNaCl==1.3.0
+pyparsing==2.4.7
+pytest==5.4.1
+pytest-cov==2.8.1
+pytest-django==3.9.0
+pytest-watch==4.2.0
+python-dateutil==2.8.1
+pytz==2019.3
+PyYAML==5.3.1
+requests==2.23.0
+six==1.14.0
+snowballstemmer==2.0.0
+sphinxcontrib-websupport==1.2.1
+sqlparse==0.3.1
+text-unidecode==1.3
+tornado==6.0.4
+urllib3==1.25.8
+watchdog==0.10.2
+wcwidth==0.1.9
+whitenoise==5.0.1
+zipp==3.1.0
